# My-Voice-Assistant

./: .env.example  .gitignore  CHANGELOG.md  PROJECT_CONTEXT.md  README.md  browser_test.py  playwright_test.py  pyproject.toml  test_router.py
architecture/: scalable_architecture.md
docs/: roadmap.md
docs/contributions/: 2026-06-02-initial-scaffold.md
docs/decisions/: DECISION-001-documentation-workflow.md  DECISION-002-llm-provider-strategy.md  DECISION-003-voice-stack.md
docs/features/: basic_voice_conversation.md
docs/journal/: 2026-06-02-initial-build.md
research/: vision_analysis.md
setup/: external_requirements.md
src/amiii/: __init__.py  __main__.py  cli.py  config.py  errors.py
src/amiii/audio/: __init__.py  input.py
src/amiii/conversation/: __init__.py  orchestrator.py
src/amiii/llm/: __init__.py  base.py  factory.py  groq.py  ollama.py
src/amiii/safety/: __init__.py  confirmation.py
src/amiii/stt/: __init__.py  faster_whisper.py
src/amiii/tools/: __init__.py  applications.py  browser.py  coding.py  files.py  intent_router.py  memory.py  registry.py
src/amiii/tts/: __init__.py  piper.py
tests/: test_browser_tool.py  test_conversation.py  test_llm_factory.py  test_project_structure.py
